--- a/src/classes/WaveDataManagerController.cls
+++ b/src/classes/WaveDataManagerController.cls
@@ -336,13 +336,15 @@ public with sharing class WaveDataManagerController {
 
 		this.processingLog.add('Loading ' + csvData.size() + ' records for ' + currentNode.name + ' object...');*/		
 
-		HttpResponse res = WaveConfiguratorUtils.httpCallout(currentNode.url, 'GET', false, '');
+		HttpResponse res = WaveConfiguratorUtils.httpGetCallout(currentNode.url);
 		String csvDataWithHeaders = res.getBody();
 		
 		// We search for \n
 		Integer indexOfLF = csvDataWithHeaders.indexOf('\n');
 		if(indexOfLF != -1){
+			
 			String headersLine = csvDataWithHeaders.substring(0, indexOfLF);
+			System.debug('Headers: ' + headersLine);
 			
 			// We search for \r
 			if(headersLine.indexOf('\r') != -1){
@@ -359,16 +361,23 @@ public with sharing class WaveDataManagerController {
 
 			String csvData = csvDataWithHeaders.substringAfter('\n');
 
-			// Start the batch process
-			CsvDataImportBatch batchProcess = new CsvDataImportBatch(Schema.getGlobalDescribe().get(currentNode.name), csvData, currentNode.fieldPositions, currentNode.relations);
-			this.batchProcessId = Database.executeBatch(batchProcess);
+			if(csvData.length() > 0){
 
-			// Now monitor job execution
-			this.monitorJobExecution = true;
-			AsyncApexJob asyncJob = [SELECT CompletedDate, JobItemsProcessed, NumberOfErrors, Status, TotalJobItems FROM AsyncApexJob WHERE Id = :this.batchProcessId];			
-			this.totalBatches = asyncJob.TotalJobItems;
-			this.batchesProcessed = asyncJob.JobItemsProcessed;
-			this.showJobStatistics = true;
+				this.currentObjectProcessing = currentNode.name;
+
+				this.processingLog.add('Loading records for ' + currentNode.name + ' object...');
+
+				// Start the batch process
+				CsvDataImportBatch batchProcess = new CsvDataImportBatch(Schema.getGlobalDescribe().get(currentNode.name), csvData, currentNode.fieldPositions, currentNode.relations);
+				this.batchProcessId = Database.executeBatch(batchProcess);
+
+				// Now monitor job execution
+				this.monitorJobExecution = true;
+				AsyncApexJob asyncJob = [SELECT CompletedDate, JobItemsProcessed, NumberOfErrors, Status, TotalJobItems FROM AsyncApexJob WHERE Id = :this.batchProcessId];			
+				this.totalBatches = asyncJob.TotalJobItems;
+				this.batchesProcessed = asyncJob.JobItemsProcessed;
+				this.showJobStatistics = true;
+			}
 		}		
 	}
 
